# irods_client_s3_api

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_packages.sh  config.json.template  dockerfile  irods_builder.Dockerfile  irods_runner.Dockerfile  s3_api_diagram-draw.io.xml  vcpkg.json
.github/workflows/: build-and-test-s3-api-ubuntu.yml  build-irods-s3-api-ubuntu-22.yml  build-irods-s3-api-ubuntu-24.yml
core/: CMakeLists.txt
core/include/irods/private/s3_api/: authentication.hpp  bucket.hpp  common.hpp  common_routines.hpp  configuration.hpp  connection.hpp  crlf_parser.hpp  globals.hpp  hmac.hpp  log.hpp  process_stash.hpp  session.hpp  transport.hpp  types.hpp  version.hpp.in
core/src/: auth_plugin.cpp  authentication.cpp  bucket_plugin.cpp  common.cpp  configuration.cpp  connection.cpp  crlf_parser.cpp  globals.cpp  hmac.cpp  main.cpp  process_stash.cpp  session.cpp  tags  transport.cpp
endpoints/: CMakeLists.txt
endpoints/authentication/: CMakeLists.txt
endpoints/authentication/src/: main.cpp
endpoints/put_object/: CMakeLists.txt
endpoints/put_object/src/: main.cpp
endpoints/s3/: CMakeLists.txt
endpoints/s3/src/: abortmultipartupload.cpp  completemultipartupload.cpp  copyobject.cpp  createmultipartupload.cpp  deleteobject.cpp  deleteobjects.cpp  getobject.cpp  headbucket.cpp  headobject.cpp  listbuckets.cpp  listobjects.cpp  putobject.cpp
endpoints/shared/include/irods/private/s3_api/: handlers.hpp  s3_api.hpp
scripts/: build_bridge.sh  get_build_deps.sh  run_bridge.sh
src/: CMakeLists.txt  auth_plugin.cpp  auth_plugin.h  authentication.cpp  authentication.hpp  bucket.cpp  bucket.hpp  bucket_plugin.cpp  bucket_plugin.h  common_routines.hpp  configuration.cpp  configuration.hpp  connection.cpp  connection.hpp  event_loop.hpp  hmac.cpp  hmac.hpp  main.cpp  multipart.cpp  multipart.hpp  persistence.hpp  persistence_plugin.cpp  persistence_plugin.h  plugin.cpp  plugin.hpp  types.hpp
src/plugins/: CMakeLists.txt
src/plugins/sqlite_persistence_plugin/: CMakeLists.txt  sqlite_persistence.cpp
src/plugins/static_authentication_resolver/: CMakeLists.txt  static_authentication_resolver.cpp
src/plugins/static_bucket_resolver/: CMakeLists.txt  static_bucket_resolver.cpp
src/s3/: CMakeLists.txt  copyobject.cpp  deleteobject.cpp  getobject.cpp  headbucket.cpp  headobject.cpp  listbuckets.cpp  listobjects.cpp  putobject.cpp  s3_api.hpp
tests/: __init__.py  abortmultipartupload_test.py  copyobject_test.py  deleteobject_test.py  getobject_test.py  headbucket_test.py  headobject_test.py  host_port.py  listbuckets_test.py  listobject_test.py  presignedurl_test.py  putobject_test.py  run_all_tests.py  utility.py
tests/docker/: aws_credentials  build_s3_api.sh  client.ubuntu20.Dockerfile  compose-irods-4.3.5.yml  compose.yml  config.json  docker-compose.yml  irods.ubuntu20.Dockerfile  start.client.ubuntu20.sh  start.irods.ubuntu20.sh
tests/docker/irods_catalog_provider/: Dockerfile  entrypoint.sh
tests/docker/test_runner/: Dockerfile  entrypoint.sh
tests/libs/: command.py  execute.py  lib.py  utility.py
